--- a/CSS/style.css
+++ b/CSS/style.css
@@ -111,5 +111,81 @@ header{
 	height: 90vh;
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: center center;
+	
+}
+
+/* first section of Main section start here  */
+
+#frist_secton{
+	background-color: #16213E;
+	padding-bottom: 100px;
+}
+
+#service_parent{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	width: 1100px;
+	margin: 0px auto;
+	grid-gap: 25px;
+}
+
+.service_title{
+text-align: center;
+color: white;
+padding: 50px 0px;
+letter-spacing: 0.2em;
+font-size: 28px;
+
+}
+
+.single_service_card{
+    background-color: white;
+	text-align: center;
+	color: black;
+	padding: 30px 20px;
+	border-radius: 5px;
+	border: 3px solid green;
+	box-shadow: 5px 5px 10px gray;
+	transition: 0.5s;
+}
+
+.single_service_card:hover{
+	background-color: rgb(190, 190, 202);
+	box-shadow: 5px 5px 15px rgb(243, 237, 237, 0.5);
+}
+
+.single_service_card i{
+	font-size: 40px;
+}
+
+.single_service_card h2{
+	margin: 10px 0px;
+	font-weight: bold;
+}
+
+.single_service_card p{
+	font-weight: bold;
+}
+
+/* first section of main tag media querry code start here  */
+
+@media only screen and (max-width:688px) {
+#service_parent{
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	width: 100%;
+	grid-gap: 10px;
+}
+}
+
+@media only screen and (min-width: 699px) and (max-width: 1100px) {
+	
+#service_parent{
+	display: grid;
+	grid-template-columns:repeat(2, 1fr);
+	width: 100%;
+	grid-gap: 20px;
+}
 	
 }
