--- a/CSS/style.css
+++ b/CSS/style.css
@@ -212,20 +212,83 @@ font-size: 28px;
 }
 
 
+/* Third section more about venilla code start here   */
 
+#third_section{
+	background-image: url(../images/sea2.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	padding: 150px 0px;
+}
 
+#about_parent{
+  display: flex;
+  margin: 0px 200px 0px 200px;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+  color: white;
+  
+}
 
+.more_about_venilla h4{
+	margin-bottom: 20px;
+	font-size: 20px;
+}
 
+.more_about_venilla ul{
+	margin: 20px 0px;
+}
+
+.more_about_venilla a{
+	text-decoration: none;
+	background-color: yellow;
+	padding: 10px 30px;
+	font-size: 18px;
+	display: inline-block;
+	margin-top: 20px;
+	color: black;
+	border-radius: 5px;
+
+}
+
+#about_single_item_parent{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 25px;
+}
+
+.about_single_item{
+	background-color: #EAECEE;
+	color: black;
+	padding: 40px 20px;
+	border-radius: 5px;
+	text-align: center;
+	border: 2px solid lightgreen;
+}
+
+.about_single_item h4{
+	font-size: 15px;
+	padding: 10px 0px 20px 0px;
+}
 
 /* media querry code start here   */
 
 @media only screen and (max-width:688px) {
+
+	/* Service section code start  */
+
 #service_parent{
 	display: grid;
 	grid-template-columns: repeat(1, 1fr);
 	width: 100%;
 	grid-gap: 10px;
 }
+
+   /* Service section code ends  */
+
+   /* Smart area code start  */
 
 #smart_parent{
 	display: block;
@@ -237,10 +300,28 @@ font-size: 28px;
 	margin-bottom: 50px;
 }
 
+   /* Smart area code ends  */
+
+   /* About section code start  */
+
+#about_parent{
+  display: block;
+  margin: 0px 30px 0px 30px;
+}
+
+#about_single_item_parent{
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-gap: 15px;
+	margin-top: 50px;
+}
+
 }
 
 @media only screen and (min-width: 699px) and (max-width: 1100px) {
-	
+
+	/* Service section code start  */
+
 #service_parent{
 	display: grid;
 	grid-template-columns:repeat(2, 1fr);
@@ -248,6 +329,9 @@ font-size: 28px;
 	grid-gap: 20px;
 }
 
+   /* Service section code ends  */
+
+   /* Smart section code start  */
 #smart_parent{
 	display: block;
 	margin: 0px 70px 0px 70px;
@@ -257,5 +341,20 @@ font-size: 28px;
 	width: 100%;
 	margin-bottom: 70px;
 }
+   
+   /* Service section code ends  */
 
+   /* About section code start  */
+
+#about_parent{
+  display: block;
+  margin: 0px 70px 0px 70px;
+}
+
+#about_single_item_parent{
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-gap: 20px;
+	margin-top: 50px;
+}
 }
