--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,7 @@
 
 body{
 	 font-family: "Montserrat", sans-serif;
+
 }
 
 nav{
@@ -273,6 +274,187 @@ font-size: 28px;
 	padding: 10px 0px 20px 0px;
 }
 
+/* fourth section advice part code start   */
+
+#fourth_section1{
+   
+	background-color: #154360;
+	padding: 100px 0px;
+	color: white;
+}
+
+#advice_parent{
+	display: flex;
+	margin-left: 200px;
+	margin-right: 200px;
+	gap: 50px;
+}
+
+.advice_image_box img{
+	width: 100%;
+}
+
+
+
+.single_advice p{
+	margin: 20px 0px;
+	line-height: 1.5;
+	text-align: justify;
+}
+
+.single_advice h3{
+	font-size: 25px;
+	border-bottom: 2px solid red;
+	padding-bottom: 20px;
+}
+
+.single_advice h4{
+	font-size: 25px;
+	margin-top: 10px;
+}
+
+.single_advice a{
+	text-decoration: none;
+	color: black;
+	background-color: white;
+	padding: 10px 30px;
+	border-radius: 40px;
+	font-size: 18px;
+	display: inline-block;
+	margin-top: 20px;
+	transition: 0.3s;
+}
+
+.single_advice a:hover{
+	background-color: wheat;
+}
+
+.advice_section_icons{
+	text-align: center;
+}
+
+.advice_section_icons a{
+	margin: 0px 5px;
+	border: 1px solid black;
+}
+
+/* fifth section , contact sction start  */
+
+#conatact_section{
+
+	background-image: linear-gradient(#3958a25e, #4089C7 ), url(../images/sky1.jpg);
+	padding: 100px 0px;
+	background-repeat: no-repeat;
+	background-size:cover;
+	background-position: center center;
+}
+
+form{
+	background-color: #2e357a;
+	max-width: 50%;
+	margin: 0 auto;
+	padding: 50px 60px;
+	border: 6px solid #4497D3;
+	border-radius: 10px;
+}
+
+form h2{
+	color: white;
+	text-align: center;
+	font-size: 30px;
+	letter-spacing: 0.1em;
+}
+
+form p{
+	color: white;
+	text-align: center;
+	margin: 30px 0px;
+	letter-spacing: 0.1em;
+}
+
+.form_input{
+	display: block;
+	width: 100%;
+	height: 40px;
+	margin: 50px 0;
+	border: none;
+	background: none;
+	outline: none;
+	color: white;
+	border-bottom: 3px solid #4497D3;
+	font-size: 18px;
+}
+
+.form_input::placeholder{
+	color: #4497D3;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.submit_button{
+   display: block;
+   margin: 0 auto;
+   padding: 5px 40px;
+   font-size: 20px;
+   background: none;
+   color: white;
+   outline-style: ridge;
+   cursor: pointer;
+   border-radius: 3px;
+   transition: 0.5s;
+}
+
+.submit_button:hover{
+	background-color: #16213E;
+}
+
+
+/* Sixth section- Match section start  */
+
+#sixth_section{
+	background-color: #07254F;
+	color: white;
+	padding: 100px 0px;
+}
+
+#match_parent{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	margin-left: 200px;
+	margin-right: 200px;
+	grid-gap: 45px;
+}
+
+.single_match{
+	border: 4px solid #26528F;
+	padding: 20px;
+}
+
+.single_match i{
+	font-size: 40px;
+	padding: 0px 20px 10px 20px;
+	
+}
+
+.single_match h5{
+	margin-bottom: 10px;
+}
+
+.single_match p{
+	color:#6D809C;
+	font-size: 14px;
+}
+
+.single_match:nth-child(2){
+	border: 4px solid white;
+}
+
+.first_single_match{
+	line-height: 1.5;
+	letter-spacing: 0.1em;
+}
+
+
 /* media querry code start here   */
 
 @media only screen and (max-width:688px) {
@@ -316,9 +498,61 @@ font-size: 28px;
 	margin-top: 50px;
 }
 
+/* About section ends  */
+
+/* Fourth section code start  */
+
+
+#advice_parent{
+	display: block;
+	margin-left: 30px;
+	margin-right: 30px;
+	
 }
 
+.advice_section_icons{
+	text-align: left;
+}
+
+.advice_section_icons a{
+	margin: 10px 5px;
+}
+
+.single_advice h3{
+	margin-top: 50px;
+}
+
+/* fourth section ends  */
+
+/* contact section start  */
+
+form{
+	background-color: #2e357a;
+	max-width: 90%;
+	padding: 20px 30px;
+}
+
+/* Fourth section end  */
+
+/* Match section start here  */
+
+#match_parent{
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	margin-left: 30px;
+	margin-right: 30px;
+	grid-gap: 25px;
+}
+
+.first_single_match{
+	text-align: center;
+}
+
+}
+
+
 @media only screen and (min-width: 699px) and (max-width: 1100px) {
+
 
 	/* Service section code start  */
 
@@ -334,7 +568,8 @@ font-size: 28px;
    /* Smart section code start  */
 #smart_parent{
 	display: block;
-	margin: 0px 70px 0px 70px;
+	margin-left: 70px;
+	margin-right: 70px;
 }
 
 .smart_image img{
@@ -348,7 +583,9 @@ font-size: 28px;
 
 #about_parent{
   display: block;
-  margin: 0px 70px 0px 70px;
+  margin-left: 70px;
+  margin-right: 70px;
+
 }
 
 #about_single_item_parent{
@@ -357,4 +594,45 @@ font-size: 28px;
 	grid-gap: 20px;
 	margin-top: 50px;
 }
+
+  /* About section end  */
+
+  /* Fourth section start  */
+
+#advice_parent{
+	display: flex;
+	margin-left: 70px;
+	margin-right: 70px;
+}
+
+.advice_section_icons{
+	text-align: center;
+}
+
+.advice_section_icons a{
+	margin: 10px 5px;
+}
+
+/* fourth section ends  */
+
+/* contact section start  */
+
+form{
+	background-color: #2e357a;
+	max-width: 90%;
+	padding: 40px 50px;
+}
+
+/* Fourth section end  */
+
+/* Match section start here  */
+
+#match_parent{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	margin-left: 70px;
+	margin-right: 70px;
+	grid-gap: 35px;
+}
+
 }
